# RecBole

./: pyproject.toml  pyproject.toml.example  requirements.txt  requirements_old.txt  setup.sh
recbole/trainer/: trainer.py
