[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.10.0"
dependencies = [
    "colorama>=0.4.4",
    "colorlog>=4.7.2",
    "hyperopt==0.2.5",
    "numpy==1.26.4",
    "pandas>=1.3.0",
    "plotly>=4.0.0",
    "psutil>=5.9.0",
    "pyyaml>=5.1.0",
    "ray>=1.13.0,<=2.6.3",
    "scikit-learn>=0.23.2",
    "scipy>=1.6.0",
    "tabulate>=0.8.10",
    "tensorboard>=2.5.0",
    "texttable>=0.9.0",
    "thop>=0.1.1.post2207130030",
    "torch>=2.6.0",
    "tqdm>=4.48.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
